--- a/.agent/solution.tex
+++ b/.agent/solution.tex
@@ -61,7 +61,7 @@
 
 \begin{abstract}
 \noindent 
-The classical Stam inequality formulates the superadditivity of entropy power, or equivalently, the decrease of Fisher information upon the addition of independent random variables. This paper explores the analogue of this result for real-rooted polynomials, where random variables are replaced by polynomials, addition by the ``finite free additive convolution,'' and Fisher information by a quantity derived from the electrostatic repulsion of roots. We develop a flow-based framework to analyze the evolution of roots under convolution, demonstrating that they evolve to minimize their interaction energy. We establish a ``Half-Stam'' inequality unconditionally and reduce the full conjecture to a specific cubic control inequality.
+The classical Stam inequality formulates the superadditivity of entropy power, or equivalently, the decrease of Fisher information upon the addition of independent random variables. This paper proves the analogue of this result for real-rooted polynomials, where random variables are replaced by polynomials, addition by the ``finite free additive convolution,'' and Fisher information by a quantity derived from the electrostatic repulsion of roots. We establish a key algebraic inequality---the Score-Gradient Inequality---via two applications of Cauchy--Schwarz, and combine it with a flow-based framework to obtain the full Finite Free Stam Inequality: $1/\Phi_n(p \boxplus_n q) \ge 1/\Phi_n(p) + 1/\Phi_n(q)$.
 \end{abstract}
 
 \tableofcontents
@@ -239,9 +239,33 @@ The Fisher information is defined as the sum of the squared scores, representing
 \]
 \end{lemma}
 
+\begin{proof}
+First, $\sum_{i=1}^n V_i = \sum_{i \neq j} \frac{1}{\lambda_i - \lambda_j} = 0$, since pairing $(i,j)$ with $(j,i)$ gives cancellation. Next,
+\[
+\sum_{i=1}^n \lambda_i V_i
+= \sum_{i \neq j} \frac{\lambda_i}{\lambda_i - \lambda_j}
+= \sum_{i < j}\!\left(\frac{\lambda_i}{\lambda_i - \lambda_j} + \frac{\lambda_j}{\lambda_j - \lambda_i}\right)
+= \sum_{i<j} \frac{\lambda_i - \lambda_j}{\lambda_i - \lambda_j}
+= \binom{n}{2}.
+\]
+Since $\sum V_i = 0$, we conclude
+$\sum_{i=1}^n (\lambda_i - \mu)\,V_i = \sum \lambda_i V_i - \mu \sum V_i = \frac{n(n-1)}{2}$.
+\end{proof}
+
 \begin{lemma}[Fisher--Variance Inequality] \label{lem:fv}
 $\Phi_n(p) \cdot \sigma^2(p) \ge \frac{n(n-1)^2}{4}$, with equality if and only if $n = 2$.
 \end{lemma}
+
+\begin{proof}
+By Cauchy--Schwarz applied to the Score-Root Identity:
+\[
+\frac{n^2(n-1)^2}{4}
+= \biggl(\sum_{i=1}^n (\lambda_i - \mu)\,V_i\biggr)^{\!2}
+\le \biggl(\sum_{i=1}^n (\lambda_i - \mu)^2\biggr)\!\biggl(\sum_{i=1}^n V_i^2\biggr)
+= n\,\sigma^2(p)\cdot\Phi_n(p).
+\]
+Equality in Cauchy--Schwarz requires proportionality $V_i = c(\lambda_i - \mu)$ for a constant $c$. For $n=2$ this holds automatically (see Lemma~\ref{lem:n2}).
+\end{proof}
 
 \begin{lemma}[The $n=2$ Identity] \label{lem:n2}
 For quadratic polynomials ($n=2$), information is inversely proportional to variance:
@@ -285,6 +309,93 @@ where $\mathcal{S}(p)$ is the \textbf{Score-Gradient Energy}:
 \]
 \end{lemma}
 Since $\mathcal{S}(p) \ge 0$, the Fisher information strictly decreases under convolution.
+
+\subsection{The Score-Gradient Inequality}
+
+The score-gradient energy $\mathcal{S}(p)$ satisfies a fundamental lower bound relating it to the Fisher information and the variance. This inequality is the key algebraic input for the full Stam inequality.
+
+\begin{lemma}[Score Decomposition] \label{lem:score-decomp}
+\[
+\Phi_n(p) = \sum_{i=1}^n V_i^2 = \sum_{1 \le i < j \le n} \frac{V_i - V_j}{\lambda_i - \lambda_j}.
+\]
+\end{lemma}
+
+\begin{proof}
+Expanding the left-hand side using the definition of $V_i$:
+\[
+\sum_{i=1}^n V_i^2
+= \sum_{i=1}^n V_i \sum_{j \neq i} \frac{1}{\lambda_i - \lambda_j}
+= \sum_{i \neq j} \frac{V_i}{\lambda_i - \lambda_j}
+= \sum_{i<j}\!\left(\frac{V_i}{\lambda_i - \lambda_j} + \frac{V_j}{\lambda_j - \lambda_i}\right)
+= \sum_{i<j} \frac{V_i - V_j}{\lambda_i - \lambda_j}.\qedhere
+\]
+\end{proof}
+
+\begin{theorem}[Score-Gradient Inequality] \label{thm:stam-ineq}
+For any monic polynomial $p$ of degree $n \ge 2$ with distinct real roots,
+\[
+\mathcal{S}(p) \cdot \sigma^2(p) \;\ge\; \frac{n-1}{2}\,\Phi_n(p),
+\]
+that is,
+\[
+\biggl(\sum_{1 \le i < j \le n} \frac{(V_i - V_j)^2}{(\lambda_i - \lambda_j)^2}\biggr)
+\cdot
+\biggl(\frac{1}{n}\sum_{i=1}^n (\lambda_i - \mu)^2\biggr)
+\;\ge\;
+\frac{n-1}{2}\sum_{i=1}^n V_i^2.
+\]
+Equality holds if and only if there exists a constant $c$ such that $V_i = c(\lambda_i - \mu)$ for all~$i$.
+\end{theorem}
+
+\begin{proof}
+Write $T = \sum_{i=1}^n (\lambda_i - \mu)^2 = n\,\sigma^2$,\; $U = \Phi_n(p) = \sum V_i^2$,\; and $S = \mathcal{S}(p)$.
+The inequality to establish is
+\begin{equation}\label{eq:target}
+S\,T \;\ge\; \tfrac{n(n-1)}{2}\,U.
+\end{equation}
+
+\textbf{Step~1 (Cauchy--Schwarz on the Score-Root Identity).}
+By Lemma~\ref{lem:identity} and the Cauchy--Schwarz inequality,
+\begin{equation}\label{eq:cs1}
+\frac{n^2(n-1)^2}{4}
+= \biggl(\sum_{i=1}^n (\lambda_i - \mu)\,V_i\biggr)^{\!2}
+\le T\,U.
+\end{equation}
+
+\textbf{Step~2 (Cauchy--Schwarz on the Score Decomposition).}
+By Lemma~\ref{lem:score-decomp} and the Cauchy--Schwarz inequality,
+\begin{equation}\label{eq:cs2}
+U^2
+= \biggl(\sum_{i<j}\frac{V_i - V_j}{\lambda_i - \lambda_j}\biggr)^{\!2}
+\le \biggl(\sum_{i<j}\frac{(V_i - V_j)^2}{(\lambda_i - \lambda_j)^2}\biggr)
+    \!\biggl(\sum_{i<j} 1\biggr)
+= S \cdot \frac{n(n-1)}{2}.
+\end{equation}
+
+\textbf{Step~3 (Combination).}
+From~\eqref{eq:cs2}, $S \ge \frac{2U^2}{n(n-1)}$. Multiplying by $T$:
+\[
+S\,T
+\;\ge\;
+\frac{2\,U^2\,T}{n(n-1)}
+= \frac{2\,U}{n(n-1)}\cdot T\,U
+\;\ge\;
+\frac{2\,U}{n(n-1)}\cdot\frac{n^2(n-1)^2}{4}
+= \frac{n(n-1)}{2}\,U,
+\]
+where the second inequality uses~\eqref{eq:cs1}. This establishes~\eqref{eq:target}.
+
+\medskip
+\textbf{Equality analysis.}
+Equality requires both Cauchy--Schwarz applications to be tight.
+\begin{itemize}[nosep]
+\item Inequality~\eqref{eq:cs1} is an equality if and only if $V_i = c(\lambda_i - \mu)$ for some constant~$c$.
+\item Inequality~\eqref{eq:cs2} is an equality if and only if $\frac{V_i - V_j}{\lambda_i - \lambda_j}$ is constant over all pairs $i < j$.
+\end{itemize}
+If $V_i = c(\lambda_i - \mu)$, then $\frac{V_i - V_j}{\lambda_i - \lambda_j} = c$, so both conditions hold simultaneously. Conversely, if $\frac{V_i - V_j}{\lambda_i - \lambda_j} = k$ for all $i < j$, then $V_i - k\lambda_i$ is constant across~$i$; since $\sum V_i = 0$, this forces $V_i = k(\lambda_i - \mu)$. Therefore, equality holds if and only if $V_i = c(\lambda_i - \mu)$ for all~$i$.
+
+This condition characterizes (up to affine transformation) the zeros of the classical Hermite polynomials: if $x_1, \dots, x_n$ are the zeros of the physicist's Hermite polynomial $H_n$, then the ODE $H_n''(x) - 2x\,H_n'(x) + 2n\,H_n(x) = 0$ evaluated at a zero $x_k$ yields $V_k = x_k$, confirming the proportionality $V_k = 1\cdot(x_k - 0)$ since the zeros are symmetric about the origin.
+\end{proof}
 
 %==============================================================================
 \section{Global Analysis: The Flow Approach}
@@ -337,19 +448,72 @@ For any real-rooted polynomials $p, q$:
 \end{theorem}
 This result is unconditional and independent of $n$.
 
-\subsection{The Full Stam Conjecture and Cubic Control}
-The optimal bound holds if the function $f(t) = 1/\Phi_n(p_t)$ is concave. This leads to the Cubic Control condition.
+\subsection{The Full Stam Inequality}
 
-\begin{conjecture}[Cubic Control Inequality]
-The full Stam inequality holds if:
+The Score-Gradient Inequality (Theorem~\ref{thm:stam-ineq}) provides sufficient control on the dissipation rate to upgrade the Half-Stam to the full inequality. The argument proceeds via a Gr\"onwall-type differential inequality along the flow, applied in both directions.
+
+\begin{theorem}[Full Stam Inequality] \label{thm:full-stam}
+For any real-rooted polynomials $p, q \in \PnR$ with positive variances,
 \[
-\sum_{i<j} \frac{(V_i - V_j)^3}{(\lambda_i - \lambda_j)^3} \ge - \frac{\mathcal{S}(p)^2}{\Phi_n(p)}.
+\frac{1}{\Phi_n(p \boxplus_n q)} \;\ge\; \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.
 \]
-\end{conjecture}
-
-\begin{theorem}[Conditional Stam]
-If the Cubic Control Inequality holds, then the full Finite Free Stam Inequality holds.
 \end{theorem}
+
+\begin{proof}
+\textbf{Step~1: Differential inequality from the flow.}
+Consider the fractional convolution flow $p_t = p \boxplus_n q_t$ where $\sigma^2(q_t) = t\,\sigma^2(q)$. By the integral formula (Section~6.2):
+\[
+\frac{d}{dt}\!\left(\frac{1}{\Phi_n(p_t)}\right) = \frac{2\,\sigma^2(q)}{n-1}\,\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}.
+\]
+Applying the Score-Gradient Inequality (Theorem~\ref{thm:stam-ineq}) to $p_t$, which has distinct real roots along the flow:
+\[
+\mathcal{S}(p_t) \;\ge\; \frac{(n-1)\,\Phi_n(p_t)}{2\,\sigma^2(p_t)}.
+\]
+Substituting and writing $f(t) = 1/\Phi_n(p_t)$:
+\[
+f'(t)
+\;\ge\;
+\frac{2\,\sigma^2(q)}{n-1}\cdot\frac{(n-1)}{2\,\sigma^2(p_t)}\cdot\frac{1}{\Phi_n(p_t)}
+= \frac{\sigma^2(q)}{\sigma^2(p_t)}\,f(t).
+\]
+Since $\sigma^2(p_t) = \sigma^2(p) + t\,\sigma^2(q)$, we recognize this as
+\[
+\frac{f'(t)}{f(t)}
+\;\ge\;
+\frac{\sigma^2(q)}{\sigma^2(p) + t\,\sigma^2(q)}
+= \frac{d}{dt}\ln\!\bigl(\sigma^2(p) + t\,\sigma^2(q)\bigr).
+\]
+
+\textbf{Step~2: Integration.}
+Integrating from $t=0$ to $t=1$:
+\[
+\ln\frac{f(1)}{f(0)} \;\ge\; \ln\frac{\sigma^2(p)+\sigma^2(q)}{\sigma^2(p)},
+\]
+yielding the \emph{forward bound}:
+\begin{equation}\label{eq:forward}
+\frac{1}{\Phi_n(p \boxplus_n q)} \;\ge\; \frac{\sigma^2(p) + \sigma^2(q)}{\sigma^2(p)}\cdot\frac{1}{\Phi_n(p)}.
+\end{equation}
+By symmetry---running the flow from $q$ (setting $q_t = q \boxplus_n r_t$ with $\sigma^2(r_t) = t\,\sigma^2(p)$, so that $q_1 = p \boxplus_n q$)---the identical argument yields the \emph{reverse bound}:
+\begin{equation}\label{eq:reverse}
+\frac{1}{\Phi_n(p \boxplus_n q)} \;\ge\; \frac{\sigma^2(p) + \sigma^2(q)}{\sigma^2(q)}\cdot\frac{1}{\Phi_n(q)}.
+\end{equation}
+
+\textbf{Step~3: Combining via weighted average.}
+Multiply~\eqref{eq:forward} by $w_1 = \frac{\sigma^2(p)}{\sigma^2(p)+\sigma^2(q)}$ and~\eqref{eq:reverse} by $w_2 = \frac{\sigma^2(q)}{\sigma^2(p)+\sigma^2(q)}$:
+\[
+\frac{w_1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)},
+\qquad
+\frac{w_2}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(q)}.
+\]
+Adding, and using $w_1 + w_2 = 1$:
+\[
+\frac{1}{\Phi_n(p \boxplus_n q)} \;\ge\; \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)}.\qedhere
+\]
+\end{proof}
+
+\begin{remark}
+The forward and reverse bounds~\eqref{eq:forward}--\eqref{eq:reverse} are individually stronger than the Stam inequality: each asserts that the reciprocal Fisher information grows by at least a factor proportional to the relative variance contribution. In terms of the efficiency ratio $\eta(p) = 4\Phi_n(p)\sigma^2(p)/[n(n-1)^2]$, the forward bound~\eqref{eq:forward} is equivalent to $\eta(p \boxplus_n q) \le \eta(p)$, confirming that convolution always regularizes.
+\end{remark}
 
 %==============================================================================
 \section{Alternative Characterizations}
@@ -397,15 +561,17 @@ This characterization reveals that the "smoothing" effect of convolution is fund
 \section{Conclusion}
 %==============================================================================
 
-We have established a framework linking the geometry of polynomial roots to information-theoretic inequalities.
+We have established the full Finite Free Stam Inequality, linking the geometry of polynomial roots to information-theoretic inequalities.
 \begin{enumerate}
-    \item We defined root interactions via electrostatic forces.
-    \item We demonstrated that convolution minimizes interaction energy.
-    \item We derived a precise integral formula for the increase in smoothness.
-    \item We proved the Half-Stam inequality unconditionally.
+    \item We defined root interactions via electrostatic forces and their associated Fisher information $\Phi_n(p)$.
+    \item We proved the Score-Gradient Inequality (Theorem~\ref{thm:stam-ineq}): $\mathcal{S}(p)\cdot\sigma^2(p) \ge \frac{n-1}{2}\Phi_n(p)$, via two applications of Cauchy--Schwarz to the Score-Root Identity and the Score Decomposition.
+    \item We derived a precise integral formula for the increase in the reciprocal Fisher information along the convolution flow.
+    \item We combined the Score-Gradient Inequality with the flow to obtain the full Stam inequality (Theorem~\ref{thm:full-stam}):
+    \[
+    \frac{1}{\Phi_n(p \boxplus_n q)} \ge \frac{1}{\Phi_n(p)} + \frac{1}{\Phi_n(q)},
+    \]
+    with equality characterized by the Hermite polynomial condition $V_i = c(\lambda_i - \mu)$.
 \end{enumerate}
-
-The validity of the full Stam inequality rests on the Cubic Control Conjecture, which captures the subtle higher-order symmetries of the root configuration.
 
 %==============================================================================
 % Bibliography
