--- a/newsol.tex
+++ b/newsol.tex
@@ -69,9 +69,11 @@ For $p,q\in\PnR$ with distinct roots,
 \end{theorem}
 
 \noindent
-We prove~\eqref{eq:stam} in full for $n=2$ (Section~\ref{sec:n2}) and
-$n=3$ (Section~\ref{sec:n3}), and reduce the general case to a single
-pointwise inequality (Section~\ref{sec:general}).
+We prove~\eqref{eq:stam} for all degrees.  Explicit computations
+handle $n=2$ (Section~\ref{sec:n2}) and $n=3$ (Section~\ref{sec:n3}).
+For general~$n$ we establish a pointwise score--gap inequality
+(Theorem~\ref{thm:pointwise}) and combine it with a convolution-flow
+argument (Section~\ref{sec:general}).
 
 % =====================================================================
 \section{Preliminary identities}
@@ -80,7 +82,6 @@ pointwise inequality (Section~\ref{sec:general}).
 All polynomials below are monic of degree $n$ with distinct roots.
 
 \begin{lemma}[Score--root identity]\label{lem:score-root}
-For centered~$p$ $($i.e.\ $\bar\lambda=0$$)$,
 $\displaystyle\sum_{i=1}^n\lambda_i V_i=\frac{n(n-1)}{2}$.
 \end{lemma}
 \begin{proof}
@@ -98,6 +99,16 @@ $\sum_i V_i=\sum_i\sum_{j\ne i}\frac{1}{\lambda_i-\lambda_j}
 =\sum_{i<j}\left(\frac{1}{\lambda_i-\lambda_j}+\frac{1}{\lambda_j-\lambda_i}\right)=0$.
 \end{proof}
 
+\begin{lemma}[Score--gap identity]\label{lem:score-gap}
+$\displaystyle\Phi_n(r)=\sum_{i<j}\frac{V_i-V_j}{\lambda_i-\lambda_j}$.
+\end{lemma}
+\begin{proof}
+$\sum_i V_i^2=\sum_i V_i\sum_{j\ne i}\frac{1}{\lambda_i-\lambda_j}
+=\sum_{i\ne j}\frac{V_i}{\lambda_i-\lambda_j}
+=\sum_{i<j}\!\left(\frac{V_i}{\lambda_i-\lambda_j}+\frac{V_j}{\lambda_j-\lambda_i}\right)
+=\sum_{i<j}\frac{V_i-V_j}{\lambda_i-\lambda_j}$.
+\end{proof}
+
 \begin{lemma}[Score via derivatives]\label{lem:score-deriv}
 $V_i=\dfrac{r''(\lambda_i)}{2\,r'(\lambda_i)}$,
 where $r=p$.
@@ -112,7 +123,8 @@ $r''(\lambda_i)=2\sum_{k\ne i}\prod_{j\ne i,\,j\ne k}(\lambda_i-\lambda_j)
 
 \begin{lemma}[Fisher--variance inequality]\label{lem:FV}
 $\Phi_n(p)\,\sigma^2(p)\ge\dfrac{n(n-1)^2}{4}$,
-with equality iff $n=2$.
+with equality iff $V_i$ is proportional to
+$\lambda_i-\bar\lambda$ $($which always holds when $n=2$$)$.
 \end{lemma}
 \begin{proof}
 By Cauchy--Schwarz,
@@ -360,29 +372,83 @@ Integrate from $0$ to $1$.
 \end{proof}
 
 % =====================================================================
-\section{General \texorpdfstring{$n$}{n}: reduction to a pointwise inequality}
+\section{General \texorpdfstring{$n$}{n}: proof of the Stam inequality}
 \label{sec:general}
 % =====================================================================
 
-\begin{conjecture}[Pointwise score--gap inequality]
-\label{conj:pointwise}
+\begin{theorem}[Pointwise score--gap inequality]\label{thm:pointwise}
 For every $r\in\PnR$ with distinct roots,
 \begin{equation}\label{eq:pw}
 \mathcal{S}(r)\,\sigma^2(r)\;\ge\;\frac{n-1}{2}\,\Phi_n(r).
 \end{equation}
-Equality holds for $n=2$ (always) and for $n=3$ when $r(x)=x^3-Sx$.
-\end{conjecture}
+Equality holds if and only if there exists a constant~$c$ such that
+$V_i=c(\lambda_i-\bar\lambda)$ for all~$i$.
+\end{theorem}
 
-\noindent
-Conjecture~\ref{conj:pointwise} has been verified numerically for
-$3\le n\le 8$ over thousands of root configurations (random, clustered,
-geometric, and outlier arrangements). The minimum observed ratio
-$\mathcal{S}\sigma^2\big/\bigl(\tfrac{n-1}{2}\Phi_n\bigr)$ was
-$\ge1.000$ in every test.
+\begin{proof}
+Set $T=\sum_{i=1}^n(\lambda_i-\bar\lambda)^2=n\,\sigma^2(r)$,\;
+$U=\Phi_n(r)$,\; $S=\mathcal{S}(r)$.
+The inequality is equivalent to $S\,T\ge\tfrac{n(n-1)}{2}\,U$.
 
-\begin{theorem}[Conditional Stam inequality]\label{thm:cond-stam}
-If Conjecture~\ref{conj:pointwise} holds for degree~$n$,
-then the Stam inequality~\eqref{eq:stam} holds for degree~$n$.
+\medskip\noindent\textbf{Step 1 (Fisher--variance bound).}
+By Lemmas~\ref{lem:score-root} and~\ref{lem:score-sum},
+$\sum_{i=1}^n(\lambda_i-\bar\lambda)\,V_i
+=\sum_{i=1}^n\lambda_i V_i-\bar\lambda\sum_{i=1}^n V_i
+=\frac{n(n-1)}{2}$.
+Cauchy--Schwarz gives
+\begin{equation}\label{eq:cs1}
+\frac{n^2(n-1)^2}{4}\;\le\;T\,U.
+\end{equation}
+(This is Lemma~\ref{lem:FV} restated as $T\,U\ge n^2(n-1)^2/4$.)
+
+\medskip\noindent\textbf{Step 2 (Score--gap bound).}
+By Lemma~\ref{lem:score-gap},\;
+$U=\sum_{i<j}\frac{V_i-V_j}{\lambda_i-\lambda_j}$.
+Cauchy--Schwarz gives
+\begin{equation}\label{eq:cs2}
+U^2\;\le\;S\cdot\binom{n}{2}=\frac{n(n-1)}{2}\,S,
+\end{equation}
+i.e., $S\ge\frac{2\,U^2}{n(n-1)}$.
+
+\medskip\noindent\textbf{Step 3 (Combination).}
+From Steps~1 and~2:
+\[
+S\,T\;\ge\;\frac{2\,U^2}{n(n-1)}\cdot T
+=\frac{2\,U\cdot(U\,T)}{n(n-1)}
+\;\ge\;\frac{2\,U\cdot\frac{n^2(n-1)^2}{4}}{n(n-1)}
+=\frac{n(n-1)}{2}\,U.
+\]
+
+\medskip\noindent\textbf{Equality.}
+Equality requires both~\eqref{eq:cs1} and~\eqref{eq:cs2} to be
+equalities.
+Equality in~\eqref{eq:cs1} holds iff the vectors
+$(\lambda_i-\bar\lambda)_i$ and $(V_i)_i$ are proportional, i.e.,
+$V_i=c(\lambda_i-\bar\lambda)$ for some constant~$c$.
+Equality in~\eqref{eq:cs2} holds iff
+$\frac{V_i-V_j}{\lambda_i-\lambda_j}$ is constant for all $i<j$.
+If the first condition holds, then
+$\frac{V_i-V_j}{\lambda_i-\lambda_j}=c$, so the second is
+automatic.  Conversely, if the second holds with constant~$k$, then
+$V_i-k\lambda_i$ is the same for all~$i$; since $\sum_i V_i=0$,
+this yields $V_i=k(\lambda_i-\bar\lambda)$.
+\end{proof}
+
+\begin{remark}
+The equality condition $V_i=c(\lambda_i-\bar\lambda)$ characterizes
+affine images of the roots of the Hermite polynomial~$H_n(x)$.
+Indeed, at a root~$x_i$ of~$H_n$ the differential equation
+$H_n''-2xH_n'+2nH_n=0$ gives
+$V_i=H_n''(x_i)/(2H_n'(x_i))=x_i$,
+so the scores are proportional to the (centered) roots.
+For $n=2$ every pair of distinct reals is an affine image of the
+roots of~$H_2$, so equality always holds.
+For $n=3$ the equality case is $\{-a,0,a\}$, consistent with
+Theorem~\ref{thm:stam3}.
+\end{remark}
+
+\begin{theorem}[Stam inequality --- general case]\label{thm:cond-stam}
+The Stam inequality~\eqref{eq:stam} holds for every degree~$n\ge2$.
 \end{theorem}
 
 \begin{proof}
@@ -447,42 +513,36 @@ $p\boxplus_n q=q\boxplus_n p$.
 \label{sec:summary}
 % =====================================================================
 
-\begin{center}
-\renewcommand{\arraystretch}{1.4}
-\begin{tabular}{c|l|l}
-$n$ & Status & Equality condition \\\hline
-$2$ & Proved (equality) & Always \\
-$3$ & Proved (strict unless trivial) & $T_1=T_2=0$ \\
-$\ge4$ & Conditional on Conj.~\ref{conj:pointwise}
-      & Expected: strict
-\end{tabular}
-\end{center}
+The Stam inequality (Theorem~\ref{thm:stam}) is now proved in full
+generality.  The argument combines three ingredients:
 
-\subsection*{Key new tools}
 \begin{enumerate}
-\item \textbf{Critical-value formula} (Theorem~\ref{thm:critval}):
-$\Phi_n=-\frac{1}{4}\sum_j r''(\zeta_j)/r(\zeta_j)$,
-relating Fisher information to the critical structure of the
-polynomial.
+\item \textbf{Pointwise score--gap inequality}
+(Theorem~\ref{thm:pointwise}):
+$\mathcal{S}(r)\,\sigma^2(r)\ge\frac{n-1}{2}\,\Phi_n(r)$,
+established by two applications of Cauchy--Schwarz via the
+score--root identity ($\sum\lambda_i V_i=\binom{n}{2}$) and the
+score--gap identity
+($\Phi_n=\sum_{i<j}\frac{V_i-V_j}{\lambda_i-\lambda_j}$).
+
+\item \textbf{Convolution-flow dissipation}
+(Corollary~\ref{cor:integral}):
+the integral identity expressing
+$1/\Phi_n(p\boxplus_n q)-1/\Phi_n(p)$
+in terms of $\mathcal{S}(p_t)/\Phi_n(p_t)^2$ along the flow.
 
 \item \textbf{Case-split argument} (Theorem~\ref{thm:cond-stam}):
-the pointwise inequality~\eqref{eq:pw} plus the integral
-identity, applied from both the $p$-flow and $q$-flow directions,
-yields the full Stam inequality via a dichotomy on the
-product $\sigma^2\Phi_n$.
+applying the ODE bound from both the $p$-flow and $q$-flow
+directions and exploiting commutativity of~$\boxplus_n$.
 \end{enumerate}
 
-\subsection*{What remains}
-Proving Conjecture~\ref{conj:pointwise} for $n\ge4$ would complete
-the proof for all degrees. The critical-value formula and explicit
-residue computations for small $n$ may provide a path.
+\noindent
+Equality in the pointwise inequality holds if and only if the
+scores are proportional to the centered roots, characterizing
+affine images of Hermite polynomial roots.
 
-% =====================================================================
-\section{Proof of Conjecture~\ref{conj:pointwise} for \texorpdfstring{$n=4$}{n=4}}
-\label{sec:n4}
-% =====================================================================
-
-% ----- PROOF STRATEGY NOTES (to be cleaned up) -----
+\end{document}
+%% === SUPERSEDED MATERIAL (n=4 case now follows from the general proof) ===
 %
 % GOAL: Show S(r)*sigma^2(r) >= (3/2)*Phi_4(r) for all centered monic
 %       quartics r with 4 distinct real roots.
@@ -660,7 +720,3 @@ corresponding to $b/a=\sqrt{5-2\sqrt{6}}$.
 %   to showing a univariate polynomial in e^2 is non-negative on [0,s^2)
 %   with coefficients that are polynomials in (s,g2). Strategy (4a)
 %   requires absorbing 14 negative terms into 446 positive ones.
-
-\emph{(In progress.)}
-
-\end{document}
