--- a/newsol.tex
+++ b/newsol.tex
@@ -112,9 +112,9 @@ Inequality (Theorem~\ref{thm:sgi}), a dissipation identity for the
 convolution flow (Lemma~\ref{lem:dissip}), and a case-split
 argument exploiting commutativity of~$\boxplus_n$
 (Theorem~\ref{thm:general}).
-En route, we obtain a critical-value formula for~$\Phi_n$ via residue
-calculus (Theorem~\ref{thm:critval}) and use it to give an
-explicit verification for $n=3$ (Theorem~\ref{thm:stam3}).
+%En route, we obtain a critical-value formula for~$\Phi_n$ via residue
+%calculus (Theorem~\ref{thm:critval}) and use it to give an
+%explicit verification for $n=3$ (Theorem~\ref{thm:stam3}).
 
 \medskip
 \noindent\textbf{Convention.}
@@ -267,153 +267,159 @@ $\frac{n^2(n-1)^2}{4}
 = n\,\sigma^2(p)\,\Phi_n(p)$.
 \end{proof}
 
-%======================================================================
-\section{A critical-value formula for \texorpdfstring{$\Phi_n$}{Phi\_n}}
-\label{sec:critval}
-%======================================================================
-
-\begin{theorem}\label{thm:critval}
-Let $p \in \PnR$ have distinct roots, and let
-$\zeta_1,\ldots,\zeta_{n-1}$ be the (simple) zeros of $p'$. Then
-\begin{equation}\label{eq:critval}
-  \Phi_n(p)
-  = -\frac{1}{4}\sum_{j=1}^{n-1}\frac{p''(\zeta_j)}{p(\zeta_j)}.
-\end{equation}
-\end{theorem}
-
-\begin{proof}
-By Lemma~\ref{lem:score-deriv},
-$\Phi_n = \frac{1}{4}\sum_{i=1}^n
-  \frac{p''(\lambda_i)^2}{p'(\lambda_i)^2}$.
-Consider the meromorphic function on~$\mathbb{P}^1$
-\[
-  F(x) = \frac{p''(x)^2}{p'(x)\,p(x)}.
-\]
-
-\noindent\emph{Poles at the roots.}
-Since $p$ has a simple zero at~$\lambda_i$ and
-$p'(\lambda_i)\neq 0$,
-$\operatorname{Res}_{x=\lambda_i}F
-= p''(\lambda_i)^2/p'(\lambda_i)^2$.
-Summing: $\sum_i\operatorname{Res}_{\lambda_i}F = 4\Phi_n$.
-
-\noindent\emph{Poles at the critical points.}
-At a simple zero~$\zeta_j$ of~$p'$, we have $p(\zeta_j)\neq 0$
-(by the interlacing of roots and critical points), so
-$\operatorname{Res}_{x=\zeta_j}F = p''(\zeta_j)/p(\zeta_j)$.
-
-\noindent\emph{Pole at infinity.}
-$F(x) = n(n-1)^2/x^3 + O(x^{-4})$ as $x \to \infty$, whence
-$\operatorname{Res}_\infty F = 0$.
-
-\noindent
-The sum of all residues on~$\mathbb{P}^1$ vanishes:
-$4\Phi_n + \sum_j p''(\zeta_j)/p(\zeta_j) = 0$.
-\end{proof}
-
-\begin{remark}\label{rem:critval}
-Formula~\eqref{eq:critval} expresses $\Phi_n$ in terms of the
-critical values $p(\zeta_j)$ and the second derivatives at the
-critical points.
-It generalizes the classical relation between the discriminant and
-critical values, and yields closed-form expressions in low degree.
-\end{remark}
-
-%======================================================================
-\section{Small-degree cases}\label{sec:small}
-%======================================================================
-
-\subsection{The case $n=2$: equality}\label{ssec:n2}
-
-\begin{proposition}\label{prop:n2}
-For $n=2$, inequality~\eqref{eq:stam} holds with equality.
-\end{proposition}
-
-\begin{proof}
-If $p(x)=(x-\lambda_1)(x-\lambda_2)$ with $d=\lambda_1-\lambda_2$,
-then $V_1=-1/d$, $V_2=1/d$, sos
-$\Phi_2(p)=2/d^2$ and $\sigma^2(p)=d^2/4$.
-Hence $1/\Phi_2(p) = 2\sigma^2(p)$, and the result follows from
-variance additivity (Lemma~\ref{lem:var-add}).
-\end{proof}
-
-\subsection{The case $n=3$: residue calculus}\label{ssec:n3}
-
-Throughout this subsection all cubics are centered
-($\bar\lambda=0$), which entails no loss of generality since
-$\Phi_n$ and $\sigma^2$ are translation-invariant.
-A centered monic cubic takes the form $r(x) = x^3-Sx+T$ with $S \ge 0$
-and discriminant $\Delta = 4S^3-27T^2 > 0$.
-
-\begin{proposition}\label{prop:phi3}
-$\Phi_3(r) = \dfrac{18S^2}{4S^3-27T^2}$.
-\end{proposition}
-
-\begin{proof}
-The critical points of~$r$ are
-$\zeta_\pm = \pm\alpha$ with $\alpha=\sqrt{S/3}$,
-and $r''(x)=6x$. The critical values are
-\[
-  r(\pm\alpha)
-  = T \mp \tfrac{2S^{3/2}}{3\sqrt{3}},
-  \qquad
-  r(\alpha)\,r(-\alpha)
-  = T^2 - \tfrac{4S^3}{27}
-  = -\tfrac{\Delta}{27}.
-\]
-By Theorem~\ref{thm:critval}:
-\[
-  4\Phi_3
-  = -\frac{6\alpha}{r(\alpha)}+\frac{6\alpha}{r(-\alpha)}
-  = 6\alpha\cdot
-    \frac{r(\alpha)-r(-\alpha)}{r(\alpha)\,r(-\alpha)}.
-\]
-Since $r(\alpha)-r(-\alpha) = -4S\alpha/3$ and
-$r(\alpha)\,r(-\alpha) = -\Delta/27$:
-$4\Phi_3 = 6\alpha\cdot\frac{-4S\alpha/3}{-\Delta/27}
-= \frac{72S\alpha^2}{\Delta}
-= \frac{72S^2/3}{\Delta}\cdot 3
-= \frac{72S^2}{\Delta}$.
-\end{proof}
-
-\begin{proposition}\label{prop:cubic-conv}
-For centered monic cubics $p(x)=x^3-S_1 x+T_1$ and
-$q(x)=x^3-S_2 x+T_2$,
-\[
-  (p\boxplus_3 q)(x) = x^3-(S_1+S_2)\,x+(T_1+T_2).
-\]
-\end{proposition}
-
-\begin{proof}
-Since $a_1=b_1=0$, formula~\eqref{eq:conv-coeff} gives
-$c_1=0$, $c_2=a_2+b_2=-(S_1+S_2)$, and $c_3=a_3+b_3=T_1+T_2$
-(all cross-terms involving $a_1$ or $b_1$ vanish).
-\end{proof}
-
-\begin{theorem}\label{thm:stam3}
-Inequality~\eqref{eq:stam} holds for $n=3$, with equality if and
-only if $T_1=T_2=0$.
-\end{theorem}
-
-\begin{proof}
-From Propositions~\ref{prop:phi3} and~\ref{prop:cubic-conv},
-$1/\Phi_3(r) = \Delta/(18S^2) = 2S/9-3T^2/(2S^2)$.
-Inequality~\eqref{eq:stam} thus reduces, after cancelling the
-linear terms, to
-\begin{equation}\label{eq:cubic-ineq}
-  \frac{(T_1+T_2)^2}{(S_1+S_2)^2}
-  \;\le\;
-  \frac{T_1^2}{S_1^2}+\frac{T_2^2}{S_2^2}.
-\end{equation}
-Set $\alpha=S_1/(S_1+S_2)$, $\beta=1-\alpha$, $u=T_1/S_1$,
-$v=T_2/S_2$.
-The left-hand side becomes $(\alpha u+\beta v)^2$.
-By convexity of $t \mapsto t^2$:
-$(\alpha u+\beta v)^2 \le \alpha u^2+\beta v^2 \le u^2+v^2$,
-establishing~\eqref{eq:cubic-ineq}.
-Equality requires $\alpha u^2+\beta v^2 = u^2+v^2$, i.e.\
-$\beta u^2+\alpha v^2=0$, forcing $u=v=0$.
-\end{proof}
+% [Commented out: critical-value formula and small-degree cases]
+% These sections are not needed for the general proof but are kept
+% for reference.
+%
+%%======================================================================
+%\section{A critical-value formula for \texorpdfstring{$\Phi_n$}{Phi\_n}}
+%\label{sec:critval}
+%%======================================================================
+%
+%\begin{theorem}\label{thm:critval}
+%Let $p \in \PnR$ have distinct roots, and let
+%$\zeta_1,\ldots,\zeta_{n-1}$ be the (simple) zeros of $p'$. Then
+%\begin{equation}\label{eq:critval}
+%  \Phi_n(p)
+%  = -\frac{1}{4}\sum_{j=1}^{n-1}\frac{p''(\zeta_j)}{p(\zeta_j)}.
+%\end{equation}
+%\end{theorem}
+%
+%\begin{proof}
+%By Lemma~\ref{lem:score-deriv},
+%$\Phi_n = \frac{1}{4}\sum_{i=1}^n
+%  \frac{p''(\lambda_i)^2}{p'(\lambda_i)^2}$.
+%Consider the meromorphic function on~$\mathbb{P}^1$
+%\[
+%  F(x) = \frac{p''(x)^2}{p'(x)\,p(x)}.
+%\]
+%
+%\noindent\emph{Poles at the roots.}
+%Since $p$ has a simple zero at~$\lambda_i$ and
+%$p'(\lambda_i)\neq 0$,
+%$\operatorname{Res}_{x=\lambda_i}F
+%= p''(\lambda_i)^2/p'(\lambda_i)^2$.
+%Summing: $\sum_i\operatorname{Res}_{\lambda_i}F = 4\Phi_n$.
+%
+%\noindent\emph{Poles at the critical points.}
+%At a simple zero~$\zeta_j$ of~$p'$, we have $p(\zeta_j)\neq 0$
+%(by the interlacing of roots and critical points), so
+%$\operatorname{Res}_{x=\zeta_j}F = p''(\zeta_j)/p(\zeta_j)$.
+%
+%\noindent\emph{Pole at infinity.}
+%$F(x) = n(n-1)^2/x^3 + O(x^{-4})$ as $x \to \infty$, whence
+%$\operatorname{Res}_\infty F = 0$.
+%
+%\noindent
+%The sum of all residues on~$\mathbb{P}^1$ vanishes:
+%$4\Phi_n + \sum_j p''(\zeta_j)/p(\zeta_j) = 0$.
+%\end{proof}
+%
+%\begin{remark}\label{rem:critval}
+%Formula~\eqref{eq:critval} expresses $\Phi_n$ in terms of the
+%critical values $p(\zeta_j)$ and the second derivatives at the
+%critical points.
+%It generalizes the classical relation between the discriminant and
+%critical values, and yields closed-form expressions in low degree.
+%\end{remark}
+%
+%%======================================================================
+%\section{Small-degree cases}\label{sec:small}
+%%======================================================================
+%
+%\subsection{The case $n=2$: equality}\label{ssec:n2}
+%
+%\begin{proposition}\label{prop:n2}
+%For $n=2$, inequality~\eqref{eq:stam} holds with equality.
+%\end{proposition}
+%
+%\begin{proof}
+%If $p(x)=(x-\lambda_1)(x-\lambda_2)$ with $d=\lambda_1-\lambda_2$,
+%then $V_1=1/d$, $V_2=-1/d$, so
+%$\Phi_2(p)=2/d^2$ and $\sigma^2(p)=d^2/4$.
+%Hence $1/\Phi_2(p) = 2\sigma^2(p)$, and the result follows from
+%variance additivity (Lemma~\ref{lem:var-add}).
+%\end{proof}
+%
+%\subsection{The case $n=3$: residue calculus}\label{ssec:n3}
+%
+%Throughout this subsection all cubics are centered
+%($\bar\lambda=0$), which entails no loss of generality since
+%$\Phi_n$ and $\sigma^2$ are translation-invariant.
+%A centered monic cubic takes the form $r(x) = x^3-Sx+T$ with $S \ge 0$.
+%It has three distinct real roots if and only if
+%its discriminant $\Delta := 4S^3-27T^2$ is positive;
+%we assume $\Delta > 0$ throughout.
+%
+%\begin{proposition}\label{prop:phi3}
+%$\Phi_3(r) = \dfrac{18S^2}{4S^3-27T^2}$.
+%\end{proposition}
+%
+%\begin{proof}
+%The critical points of~$r$ are
+%$\zeta_\pm = \pm\alpha$ with $\alpha=\sqrt{S/3}$,
+%and $r''(x)=6x$. The critical values are
+%\[
+%  r(\pm\alpha)
+%  = T \mp \tfrac{2S^{3/2}}{3\sqrt{3}},
+%  \qquad
+%  r(\alpha)\,r(-\alpha)
+%  = T^2 - \tfrac{4S^3}{27}
+%  = -\tfrac{\Delta}{27}.
+%\]
+%By Theorem~\ref{thm:critval}:
+%\[
+%  4\Phi_3
+%  = -\frac{6\alpha}{r(\alpha)}+\frac{6\alpha}{r(-\alpha)}
+%  = 6\alpha\cdot
+%    \frac{r(\alpha)-r(-\alpha)}{r(\alpha)\,r(-\alpha)}.
+%\]
+%Since $r(\alpha)-r(-\alpha) = -4S\alpha/3$ and
+%$r(\alpha)\,r(-\alpha) = -\Delta/27$:
+%$4\Phi_3 = 6\alpha\cdot\frac{-4S\alpha/3}{-\Delta/27}
+%= \frac{216S\alpha^2}{\Delta}
+%= \frac{72S^2}{\Delta}$,
+%where the last step uses $\alpha^2=S/3$.
+%\end{proof}
+%
+%\begin{proposition}\label{prop:cubic-conv}
+%For centered monic cubics $p(x)=x^3-S_1 x+T_1$ and
+%$q(x)=x^3-S_2 x+T_2$,
+%\[
+%  (p\boxplus_3 q)(x) = x^3-(S_1+S_2)\,x+(T_1+T_2).
+%\]
+%\end{proposition}
+%
+%\begin{proof}
+%Since $a_1=b_1=0$, formula~\eqref{eq:conv-coeff} gives
+%$c_1=0$, $c_2=a_2+b_2=-(S_1+S_2)$, and $c_3=a_3+b_3=T_1+T_2$
+%(all cross-terms involving $a_1$ or $b_1$ vanish).
+%\end{proof}
+%
+%\begin{theorem}\label{thm:stam3}
+%Inequality~\eqref{eq:stam} holds for $n=3$, with equality if and
+%only if $T_1=T_2=0$.
+%\end{theorem}
+%
+%\begin{proof}
+%From Propositions~\ref{prop:phi3} and~\ref{prop:cubic-conv},
+%$1/\Phi_3(r) = \Delta/(18S^2) = 2S/9-3T^2/(2S^2)$.
+%Inequality~\eqref{eq:stam} thus reduces, after cancelling the
+%linear terms, to
+%\begin{equation}\label{eq:cubic-ineq}
+%  \frac{(T_1+T_2)^2}{(S_1+S_2)^2}
+%  \;\le\;
+%  \frac{T_1^2}{S_1^2}+\frac{T_2^2}{S_2^2}.
+%\end{equation}
+%Set $\alpha=S_1/(S_1+S_2)$, $\beta=1-\alpha$, $u=T_1/S_1$,
+%$v=T_2/S_2$.
+%The left-hand side becomes $(\alpha u+\beta v)^2$.
+%By convexity of $t \mapsto t^2$:
+%$(\alpha u+\beta v)^2 \le \alpha u^2+\beta v^2 \le u^2+v^2$,
+%establishing~\eqref{eq:cubic-ineq}.
+%Equality requires $\alpha u^2+\beta v^2 = u^2+v^2$, i.e.\
+%$\beta u^2+\alpha v^2=0$, forcing $u=v=0$.
+%\end{proof}
 
 %======================================================================
 \section{The Score-Gradient Inequality}\label{sec:sgi}
@@ -448,7 +454,7 @@ Cauchy--Schwarz,
 By Lemma~\ref{lem:score-id}\ref{it:score-gap} and
 Cauchy--Schwarz,
 \begin{equation}\label{eq:cs2}
-  U^2 \;\le\; S\cdot\tbinom{n}{2}.
+  U^2 \;\le\; S\cdot\binom{n}{2}.
 \end{equation}
 
 \noindent\textbf{Step~3.}
@@ -474,8 +480,8 @@ The equality condition $V_i = c(\lambda_i-\bar\lambda)$ characterizes,
 up to affine transformation, the zeros of the Hermite
 polynomial~$H_n$: evaluating the ODE
 $H_n''-2xH_n'+2nH_n=0$ at a zero~$x_k$ yields $V_k = x_k$.
-For $n=2$ this holds for all distinct root configurations; for $n=3$
-it reduces to $T=0$, consistent with Theorem~\ref{thm:stam3}.
+For $n=2$ this holds for all distinct root configurations.
+%for $n=3$ it reduces to $T=0$, consistent with Theorem~\ref{thm:stam3}.
 \end{remark}
 
 %======================================================================
@@ -503,6 +509,18 @@ $q_s \boxplus_n q_t = q_{s+t}$.
 The \emph{flow polynomial} is $p_t = p \boxplus_n q_t$, satisfying
 $\sigma^2(p_t)=a+tb$.
 \end{definition}
+
+\begin{remark}\label{rem:qt-status}
+For non-integer~$t$, the polynomial $q_t$ need \emph{not} have all
+real roots.
+For example, taking $n=4$ and
+$q=(x{-}100)(x{-}1)(x{+}1)(x{+}100)$, one computes
+$\kappa_4(q_{1/2})=\frac{1}{2}\kappa_4-\frac{1}{8}\kappa_2^2<0$,
+and $q_{1/2}$ has only two real roots.
+This does not affect the proof: only the flow polynomial
+$p_t = p\boxplus_n q_t$ needs to be real-rooted, which is established
+in Lemma~\ref{lem:flow-real} below.
+\end{remark}
 
 \subsection{Perturbation analysis}
 
@@ -552,6 +570,41 @@ $\sum_{i \neq j}\frac{V_i(V_i-V_j)}{(\lambda_i-\lambda_j)^2}
 = \mathcal{S}(p_t)$.
 \end{proof}
 
+\begin{lemma}\label{lem:flow-real}
+For every $t\in[0,1]$, $p_t$ has $n$ simple real roots.
+\end{lemma}
+
+\begin{proof}
+The coefficients of $p_t$ are smooth in~$t$
+(Definition~\ref{def:flow}), so the roots $\lambda_i(t)$ vary
+continuously.
+Since $p_0=p$ has simple real roots, there is a maximal interval
+$[0,T)$ on which $p_t$ has simple real roots; continuity gives
+$T>0$.
+
+For $t<T$, the root-shift formula (Lemma~\ref{lem:root-shift})
+implies
+$\dot\delta_i(t)
+= \frac{b}{n-1}\bigl(V_{i+1}(t)-V_i(t)\bigr)$
+for consecutive gaps $\delta_i = \lambda_{i+1}-\lambda_i$.
+Expanding the score difference:
+\[
+  V_{i+1}-V_i
+  = \frac{2}{\delta_i}
+    - \delta_i\!\!\sum_{j \neq i,\,i+1}
+      \frac{1}{(\lambda_{i+1}{-}\lambda_j)(\lambda_i{-}\lambda_j)},
+\]
+so $\dot\delta_i \ge \frac{2b}{(n{-}1)\delta_i}-C$ with $C$
+bounded as long as all gaps are positive.
+Hence
+$\frac{d}{dt}\delta_i^2 = 2\delta_i\,\dot\delta_i
+\ge \frac{4b}{n{-}1}-2C\delta_i$.
+For $\delta_i < \delta_0 := 2b/(C(n{-}1))$, this is strictly
+positive, so no gap can reach zero in finite time.
+Since the roots at time~$T$ remain separated, continuity extends
+simple real-rootedness past~$T$, forcing $T \ge 1$.
+\end{proof}
+
 \subsection{Dissipation and the integral identity}
 
 \begin{lemma}[Dissipation]\label{lem:dissip}
@@ -560,8 +613,13 @@ $\dfrac{d}{dt}\Phi_n(p_t)
 \end{lemma}
 
 \begin{proof}
-Divide the expansion of Lemma~\ref{lem:phi-change} by $h$ and let
-$h \to 0$.
+By Lemma~\ref{lem:phi-change},
+$\frac{\Phi_n(p_{t+h})-\Phi_n(p_t)}{h}
+= -\frac{2b}{n-1}\,\mathcal{S}(p_t)+O(h)$.
+Since $p_t$ has simple roots for all $t\in[0,1]$
+(Lemma~\ref{lem:flow-real}), the scores $V_i(t)$ and hence
+$\mathcal{S}(p_t)$ are continuous in~$t$.
+Taking $h\to 0$ yields the result.
 \end{proof}
 
 \begin{corollary}[Integral identity]\label{cor:integral}
@@ -577,7 +635,11 @@ Set $f(t)=1/\Phi_n(p_t)$. By the chain rule and
 Lemma~\ref{lem:dissip},
 $f'(t) = \frac{2b}{n-1}\cdot\frac{\mathcal{S}(p_t)}{\Phi_n(p_t)^2}
 \ge 0$.
-Integrate from $0$ to $1$ and identify the endpoints.
+By the Fundamental Theorem of Calculus,
+$f(1)-f(0) = \int_0^1 f'(t)\,dt$.
+Substituting: $f(0) = 1/\Phi_n(p_0) = 1/\Phi_n(p)$ and
+$f(1) = 1/\Phi_n(p_1) = 1/\Phi_n(p\boxplus_n q)$
+yields~\eqref{eq:integral}.
 \end{proof}
 
 %======================================================================
@@ -673,8 +735,8 @@ Equality in~\eqref{eq:stam} requires that
 $V_i(p_t) = c(t)\bigl(\lambda_i(t)-\bar\lambda(t)\bigr)$ for all
 $t \in [0,1]$, which forces both $p$ and $q$ to have roots at
 affinely rescaled zeros of the Hermite polynomial~$H_n$.
-For $n=2$ every polynomial satisfies this; for $n=3$
-it reduces to $T_1=T_2=0$ (Theorem~\ref{thm:stam3}).
+For $n=2$ every polynomial satisfies this.
+%for $n=3$ it reduces to $T_1=T_2=0$ (Theorem~\ref{thm:stam3}).
 \end{remark}
 
 %======================================================================
